csrf protection, authentication. add tables: roles, users_roles.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.ser
 server.port=8080
 
 spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework.security=DEBUG
